# MATH60082

./: CMakeLists.txt  MATH60082 - Compfin library example.ipynb  MATH60082 - Examples Sheet 7 - Crank Nicolson American Option.ipynb  MATH60082 - Examples Sheet 7 - Crank Nicolson Analysis.ipynb  MATH60082 - Examples Sheet 7 - Crank-Nicolson.ipynb  MATH60082 - Examples Sheet 7 - SOR.ipynb  README.md  apt.txt  environment.yml  math60082_cn.hpp  math60082_sor.hpp  postBuild
include/: doxygen_table.hpp  math60082_blackScholes.hpp  math60082_cheb.hpp  math60082_cn.hpp  math60082_csv_readline.hpp  math60082_data.hpp  math60082_fit.hpp  math60082_fokker_planck.hpp  math60082_gnuplot.hpp  math60082_gsl_fit.hpp  math60082_lagrange_interp.hpp  math60082_leastSquaresFit.hpp  math60082_mMatrix.hpp  math60082_mMinima.hpp  math60082_mVector.hpp  math60082_markupTable.hpp  math60082_monteCarloLeastSquares.hpp  math60082_parabollicPDE.hpp  math60082_parabollicPDE_examples.hpp  math60082_randomPaths.hpp  math60082_sor.hpp  math60082_stencils.hpp  math60082_testProject.hpp  math60082_tridag.hpp  math60082_vasicekModel.hpp
main/: math60082_csv_readline_example.cpp  math60082_example_sheet_7_american_cn.cpp  (+11 more)
src/: CMakeLists.txt  math60082_blackScholes.cpp  math60082_cheb.cpp  math60082_cn.cpp  math60082_csv_readline.cpp  math60082_eigen_fit.cpp  math60082_fokker_planck.cpp  math60082_gnuplot.cpp  math60082_gsl_fit.cpp  math60082_lagrange_interp.cpp  math60082_leastSquaresFit.cpp  math60082_mMatrix.cpp  math60082_mVector.cpp  math60082_markupTable.cpp  math60082_monteCarloLeastSquares.cpp  math60082_parabollicPDE.cpp  math60082_parabollicPDE_examples.cpp  math60082_randomPaths.cpp  math60082_sor.cpp  math60082_stencils.cpp  math60082_testProject.cpp  math60082_tridag.cpp
(+34 files in other folders)
