PROJECT( MATH60082 )

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_BUILD_TYPE Release)
FIND_PACKAGE ( Threads REQUIRED )
FIND_PACKAGE ( Boost REQUIRED )

INCLUDE_DIRECTORIES( include )

ADD_COMPILE_OPTIONS(-Wall -Wextra -Wpedantic -ffast-math -O3)

#SET(USER_LOCATION_DIR $ENV{HOME}/Codes/Jupyter-Notebooks )
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)


#ADD_SUBDIRECTORY( doc )
ADD_SUBDIRECTORY( src )
ADD_SUBDIRECTORY( main )


